--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,8 @@ server.port: 8082
 
 spring:
     application.name: temperature-processing
+    rabbitmq:
+      host: rabbitmq
+      port: 5672
+      username: ${RABBITMQ_DEFAULT_USER}
+      password: ${RABBITMQ_DEFAULT_PASS}
